[project]
name = "pytest-tf-module"
version = "0.1.0"
description = "pytest plugin for testing terraform modules"
requires-python = ">=3.10"
dependencies = [
    "pytest~=8.3.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
norecursedirs = "scenarios/quick_start_example/*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_module"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pexpect>=4.9.0",
    "pre-commit>=4.0.1",
    "ruff~=0.7.2",
]
