[project]
name = "pytest-tf-module"
version = "0.1.0"
description = "pytest plugin for testing terraform modules"
requires-python = ">=3.10"
dependencies = [
    "pytest~=8.3.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
norecursedirs = "scenarios/quick_start_example/*"
addopts = ["--import-mode=importlib"]
markers = [
    "acc: Potentially slower acceptance tests"
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_module"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = [
    "/src",
    "/tests",
    "/pyproject.toml",
    "/Makefile",
    "/README.md",
    "/uv.lock",
]
exclude = [
    "/.*",
    "**/__pycache__",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pexpect",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[dependency-groups]
dev = [
    "hatch>=1.13.0",
    "mypy>=1.13.0",
    "pexpect>=4.9.0",
    "pre-commit>=4.0.1",
    "ruff~=0.7.2",
]
